[package]
name = "vkapi2"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Teyllayka/VkApi2"
license = "MIT"
description = "vk api wrapper for rust"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"]}
serde_json = "1.0.107"
